--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "serve": "docusaurus serve",
-    "prepare": "node ./prepare.js"
+    "prepare": "node ./prepare.js",
+    "new-doc": "docusaurus docs:version 1.1.0"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.75",
