--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-mailchimp-subscribe": "^2.1.3",
+    "react-player": "^2.9.0",
     "react-transition-group": "4.4.1",
     "rehype-katex": "4",
     "remark-math": "3",
