--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/module-type-aliases": "2.0.0-alpha.75",
     "@docusaurus/plugin-pwa": "2.0.0-alpha.75",
     "@docusaurus/preset-classic": "2.0.0-alpha.75",
+    "@easyops-cn/docusaurus-search-local": "^0.23.0",
     "@questdb/sql-grammar": "^1.0.9",
     "@tsconfig/docusaurus": "1.0.2",
     "@types/react": "16.9.56",
